# EVC

./: .gitignore  README.md  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
catkin_ws/: README.md
catkin_ws/devel/: .catkin  local_setup.sh
catkin_ws/src/: README.md  publisher.sh
catkin_ws/src/imu/: CMakeLists.txt  package.xml
catkin_ws/src/imu/launch/: imu_printer.launch  imu_reader.launch
catkin_ws/src/imu/src/: imu_printer_node.py  imu_reader_node.py
catkin_ws/src/jetson_camera/: CMakeLists.txt  package.xml
catkin_ws/src/jetson_camera/config/: parameters.yaml
catkin_ws/src/jetson_camera/launch/: camera.launch  camera_subscriber.launch
catkin_ws/src/jetson_camera/src/: camera_publisher_node.py
catkin_ws/src/src/: subscriber.sh
docs/: pptx_links.txt
docs/media/: accessSolution.drawio  assignment1.drawio  bufferPolicy.drawio  directAccessProblem.drawio  sensorStack.drawio  templateNode.drawio
testScripts/: dependencies.txt
testScripts/batteryScripts/: main.py
testScripts/buttonScripts/: buttonClass.py  ledClass.py  main.py
testScripts/displayScripts/: main.py  main_python2.py
testScripts/displayScripts/Adafruit_GPIO/: GPIO.py
testScripts/encoderScripts/: encoderDriver.py  main.py
testScripts/motorScripts/: Adafruit_PWM_Servo_Driver.py  hat.py  main.py  motorDriver.py
testScripts/tofScripts/: main.py  tofDriver.py
watchdog/livenessWatchdog/: README.md  buttonWatchdog.py
workshops/templateNode/src/: launch.sh
workshops/vision_ws/src/jetson_camera/: CMakeLists.txt
workshops/vision_ws/src/jetson_camera/config/: parameters.yaml
workshops/vision_ws/src/jetson_camera/src/: camera_publisher_node.py
workshops/workshopOne/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
(+29 files in other folders)
